docs: fix drift uncovered by v0.1.0 binary verification
- docs/usage.md: subcommand table missed 'models' and 'sessions' (six
  subcommands, not four). 'config' description rewritten — it is the
  bootstrap pipeline (detect → ladder → handoff), not a generic wizard.
- docs/usage.md: drop the stale 'pre-release / will land in v0.1.0'
  banner; v0.1.0 is built.
- docs/usage.md: add an AWS / Bedrock callout noting the binary honors
  AWS_PROFILE but not AWS_DEFAULT_PROFILE (the AWS CLI honors both, so
  users hitting 'Unable to fetch credentials' get confused).
- docs/install.md: document the JVM-mode SQLiteJDBCLoader native-access
  warnings on JDK 21+, the --enable-native-access workaround, and that
  the native binary is unaffected.